--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,17 +1,66 @@
+
 .hidden{display:none;}
 .main-header{
   text-align:center;
   margin: 0 auto;
   margin-top:100px;
-  font-family: "Trajan Color", Arial, Helvetica, sans-serif;
+  font-family: 'Odibee Sans', cursive;
+  margin-bottom: 100px;
+
 }
 .ad-display{
   display: flex;
   flex-direction: row;
   margin: 0 auto;
   padding:20px;
+  width: 100%;
 }
 .svg-graphic{
   width:150px;
   padding:14px;
+  margin: 0 auto;
 }
+
+.popover { 
+    background-color: lightblue;
+    border-radius: 5px;
+    padding:5px;
+    border:1px solid black;
+
+}
+.show-popover { 
+  display: block; 
+  background-color: lightblue;
+    border-radius: 5px;
+    padding:5px;
+    border:1px solid black;
+}
+.text-wrapper{
+  display:flex;
+  flex-direction:column;
+  justify-content: center;
+  text-align: center;
+  margin: 0 auto;
+}
+p{
+  font-family: 'Caveat', cursive;
+  text-align: center;
+}
+h3{
+  font-family: 'Odibee Sans', cursive;
+  text-align: center;
+}
+.see-more{
+  font-family: 'Odibee Sans', cursive;
+  font-size:12px;
+  
+}
+span{
+  justify-content: center;
+  text-align: center;
+
+}
+h2{
+  font-size:20px;
+}
+
