--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Odibee+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Caveat|Odibee+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -13,7 +14,8 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
-    
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js"></script>
+
     <title>LOL - Marksman</title>
 </head>
 <body>
@@ -30,7 +32,8 @@
             <h3>ASHE</h3>
             <p>“One tribe, one people, one Freljord.''
             </p>
-            <span class="see-more" data-target="1">See More</span>
+            
+              <span class="see-more" data-target="1">See More</span>
           </div>
         </section>
 
@@ -214,6 +217,7 @@
           <h4 class="popularity"></h4>
         </article>
     </main>
+ 
     <script src="js/main.js"></script>
 </body>
 </html>
